# downloader-lib

./: LICENSE  README.md
simple-downloader/: prompt.txt
simple-downloader/design/: downloader_class_diagram.md  sample.md  seq1_normal_download.md  seq2_pause_resume.md  seq3_cancel_error_resume.md  クラス設計.md  シーケンス.md
simple-downloader/downloader/: CMakeLists.txt  README.md
simple-downloader/downloader/include/: CurlHandle.h  Downloader.h  ICurlHandle.h  IDownloaderObserver.h
simple-downloader/downloader/src/: CurlHandle.cpp  Downloader.cpp  main.cpp
simple-downloader/downloader/tests/: DownloaderTest.cpp  MockCurlHandle.h  MockObserver.h
